--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -6,9 +6,9 @@
   "If you did not request a password reset, no further action is required.": "Wenn Sie keine Anfrage zum Zurücksetzen des Passworts gestellt haben, ist keine weitere Aktion nötig.",
   "Hello!": "Hallo!",
   "Regards": "Mit freundlichen Grüßen",
-  "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Wenn Sie Probleme haben den \":actionText\" Button zu drücken, kopieren Sie die nachfolgende URL und fügen in Ihren Browser ein:"
+  "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Wenn Sie Probleme haben den \":actionText\" Button zu drücken, kopieren Sie die nachfolgende URL und fügen in Ihren Browser ein:",
   "User account created": "Benutzerkonto wurde erstellt",
   "You are receiving this email because a new user account was created for your email address.": "Sie erhalten diese E-Mail, weil ein neues Nutzerkonto für Ihre E-Mail-Adresse erstellt wurde.",
   "Change password": "Passwort ändern",
-  "You have :count minutes to change your password.": "Sie haben :count Mintuen, um Ihr Passwort zu ändern."
+  "You have :count minutes to change your password.": "Sie haben :count Minuten, um Ihr Passwort zu ändern."
 }
