Simplify flashMessage and lang. strings

--- a/lang/en.json
+++ b/lang/en.json
@@ -34,19 +34,16 @@
     "app.errors.server_pool_delete_failed": "The server pool could not be deleted. To delete the server pool, it must not be used by any room type.",
     "app.errors.stale_model": "The :model entity was updated in the meanwhile!",
     "app.errors.token_not_found": "The personalized room link could not be found.",
-    "app.flash.clientError.message": "An unknown error occurred in the application!",
-    "app.flash.clientError.title": "Error",
-    "app.flash.guestsOnly.message": "The request can only be done by guests!",
-    "app.flash.guestsOnly.title": "Only for guests",
+    "app.flash.clientError": "An unknown error occurred in the application!",
+    "app.flash.guestsOnly": "The request can only be made by guests!",
     "app.flash.serverError.emptyMessage": "An error occurred on the server during request!",
     "app.flash.serverError.message": ":message",
-    "app.flash.serverError.title": "Server-Error: :statusCode",
-    "app.flash.tooLarge.message": "The transmitted data was too large!",
-    "app.flash.tooLarge.title": "Error",
-    "app.flash.unauthenticated.message": "You must be authenticated to execute the request!",
-    "app.flash.unauthenticated.title": "Unauthenticated",
-    "app.flash.unauthorized.message": "You don't have the necessary rights to access the called route!",
-    "app.flash.unauthorized.title": "Unauthorized",
+    "app.flash.serverError.errorCode": "Error code: :statusCode",
+
+    "app.flash.tooLarge": "The transmitted data was too large!",
+
+    "app.flash.unauthenticated": "You must be authenticated to execute the request!",
+    "app.flash.unauthorized": "You don't have the necessary rights to access the called route!",
     "app.footer.legalNotice": "Legal notice",
     "app.footer.privacyPolicy": "Privacy policy",
     "app.help": "Do you need help?",
@@ -118,11 +115,8 @@
     "auth.email.tabTitle": "Email",
     "auth.email.title": "Login with Email",
     "auth.failed": "These credentials do not match our records.",
-    "auth.flash.login.message": "You have been successfully logged in!",
-    "auth.flash.login.title": "Successful login",
-
-    "auth.flash.logout.message": "You have been successfully logged out!",
-    "auth.flash.logout.title": "Successful logout",
+    "auth.flash.login": "Successfully logged in",
+    "auth.flash.logout": "Successfully logged out",
     "auth.forgotPassword": "Forgot password?",
     "auth.inputNewPassword": "Set new password",
     "auth.inputNewPasswordNewUser": "Set password for new user account",
@@ -269,18 +263,12 @@
     "rooms.findRooms": "Find rooms",
     "rooms.findRoomsInfo": "List of all public listed rooms without an access code",
     "rooms.firstAndLastname": "First- und last name",
-    "rooms.flash.accessCodeInvalid.message": "The access code is invalid.",
-    "rooms.flash.accessCodeInvalid.title": "Login to room failed",
-    "rooms.flash.fileForbidden.message": "The access to the requested file was forbidden.",
-    "rooms.flash.fileForbidden.title": "Access forbidden",
-    "rooms.flash.fileGone.message": "The file has been deleted in the meantime.",
-    "rooms.flash.fileGone.title": "File not found",
-    "rooms.flash.noNewRoom.message": "You do not have the necessary permission to create a new room.",
-    "rooms.flash.noNewRoom.title": "Permission denied",
-    "rooms.flash.startForbidden.message": "The room could not be started by you.",
-    "rooms.flash.startForbidden.title": "Starting failed",
-    "rooms.flash.tokenInvalid.message": "The personalised room link is no longer valid.",
-    "rooms.flash.tokenInvalid.title": "Room link invalid",
+    "rooms.flash.accessCodeInvalid": "The access code is invalid.",
+    "rooms.flash.fileForbidden": "The access to the requested file was forbidden.",
+    "rooms.flash.fileGone": "The file has been deleted in the meantime.",
+    "rooms.flash.noNewRoom": "You do not have the necessary permission to create a new room.",
+    "rooms.flash.startForbidden": "The room could not be started by you.",
+    "rooms.flash.tokenInvalid": "The personalised room link is no longer valid.",
     "rooms.invalidPersonalLink": "This personalised room link is invalid.",
     "rooms.invitation.code": "Access code: :code",
     "rooms.invitation.link": "Link: :link",
@@ -619,8 +607,8 @@
     "settings.servers.ownMeetingDescription": "Meetings that are managed by this system",
     "settings.servers.panic": "Disable & cleanup",
     "settings.servers.panicDescription": "Only meetings managed by this system are stopped!",
-    "settings.servers.panicFlash.message": "The server has been disabled. :total meetings were found and :success were successfully stopped.",
-    "settings.servers.panicFlash.title": "Disabled and cleaned",
+    "settings.servers.panic.flash.title": "The server has been disabled.",
+    "settings.servers.panic.flash.description": ":total meetings were found and :success were successfully stopped.",
     "settings.servers.panicServer": "Disable server and end all meetings",
     "settings.servers.participantCount": "Participants",
     "settings.servers.reload": "Recalculate usage",
