--- a/lang/de.json
+++ b/lang/de.json
@@ -34,19 +34,14 @@
     "app.errors.server_pool_delete_failed": "Der Serverpool konnte nicht gelöscht werden. Um den Serverpool zu löschen, darf dieser von keiner Raumart verwendet werden.",
     "app.errors.stale_model": "Der :model-Datensatz wurde in der Zwischenzeit geändert!",
     "app.errors.token_not_found": "Der personalisierte Raumlink konnte nicht gefunden werden.",
-    "app.flash.clientError.message": "Es ist ein unbekannter Fehler in der Anwendung aufgetreten!",
-    "app.flash.clientError.title": "Fehler",
-    "app.flash.guestsOnly.message": "Die Anfrage ist nur für nicht angemeldete Nutzer gestattet!",
-    "app.flash.guestsOnly.title": "Nur für Gäste",
+    "app.flash.clientError": "Es ist ein unbekannter Fehler in der Anwendung aufgetreten!",
+    "app.flash.guestsOnly": "Die Anfrage ist nur für nicht angemeldete Nutzer gestattet!",
     "app.flash.serverError.emptyMessage": "Es ist ein Fehler auf dem Server aufgetreten!",
+    "app.flash.serverError.errorCode": "Fehlercode: :statusCode",
     "app.flash.serverError.message": ":message",
-    "app.flash.serverError.title": "Fehlercode: :statusCode",
-    "app.flash.tooLarge.message": "Die übertragenen Daten waren zu groß!",
-    "app.flash.tooLarge.title": "Fehler",
-    "app.flash.unauthenticated.message": "Sie müssen angemeldet sein, um die Anfrage durchführen zu können!",
-    "app.flash.unauthenticated.title": "Nicht angemeldet",
-    "app.flash.unauthorized.message": "Sie haben für die aufgerufene Route nicht die notwendigen Rechte!",
-    "app.flash.unauthorized.title": "Nicht berechtigt",
+    "app.flash.tooLarge": "Die übertragenen Daten waren zu groß!",
+    "app.flash.unauthenticated": "Sie müssen angemeldet sein, um die Anfrage durchführen zu können!",
+    "app.flash.unauthorized": "Sie haben für die aufgerufene Route nicht die notwendigen Rechte!",
     "app.footer.legalNotice": "Impressum",
     "app.footer.privacyPolicy": "Datenschutzerklärung",
     "app.help": "Benötigen Sie Hilfe?",
@@ -110,7 +105,6 @@
     "app.save": "Speichern",
     "app.search": "Suche",
     "app.selectLocale": "Wählen Sie eine Sprache aus",
-    "app.toSearch": "Suchen",
     "app.validation.tooLarge": "Die ausgewählte Datei ist zu groß.",
     "app.wait": "Bitte warten...",
     "app.yes": "Ja",
@@ -119,10 +113,8 @@
     "auth.email.tabTitle": "Email",
     "auth.email.title": "Mit einer Email anmelden",
     "auth.failed": "Diese Kombination aus Zugangsdaten wurde nicht in unserer Datenbank gefunden.",
-    "auth.flash.login.message": "Die Anmeldung verlief erfolgreich!",
-    "auth.flash.login.title": "Erfolgreiche Anmeldung",
-    "auth.flash.logout.message": "Die Abmeldung verlief erfolgreich!",
-    "auth.flash.logout.title": "Erfolgreiche Abmeldung",
+    "auth.flash.login": "Erfolgreich angemeldet",
+    "auth.flash.logout": "Erfolgreich abgemeldet",
     "auth.forgotPassword": "Passwort vergessen?",
     "auth.inputNewPassword": "Neues Passwort setzen",
     "auth.inputNewPasswordNewUser": "Passwort für neues Nutzerkonto setzen",
@@ -269,18 +261,12 @@
     "rooms.findRooms": "Räume finden",
     "rooms.findRoomsInfo": "Liste aller öffentlich gelisteten Räume ohne Zugangscode",
     "rooms.firstAndLastname": "Vor- und Nachname",
-    "rooms.flash.accessCodeInvalid.message": "Der Zugangscode ist ungültig.",
-    "rooms.flash.accessCodeInvalid.title": "Anmeldung am Raum fehlgeschlagen",
-    "rooms.flash.fileForbidden.message": "Die Zugriff auf die Datei wurde verweigert.",
-    "rooms.flash.fileForbidden.title": "Zugriff verweigert",
-    "rooms.flash.fileGone.message": "Die Datei wurde in der Zwischenzeit gelöscht.",
-    "rooms.flash.fileGone.title": "Datei nicht gefunden",
-    "rooms.flash.noNewRoom.message": "Sie haben nicht die nötige Berechtigung um einen neuen Raum zu erstellen.",
-    "rooms.flash.noNewRoom.title": "Keine Berechtigung",
-    "rooms.flash.startForbidden.message": "Der Raum kann von Ihnen nicht gestartet werden.",
-    "rooms.flash.startForbidden.title": "Starten fehlgeschlagen",
-    "rooms.flash.tokenInvalid.message": "Der personalisierte Raumlink ist nicht mehr gültig.",
-    "rooms.flash.tokenInvalid.title": "Raumlink ungültig",
+    "rooms.flash.accessCodeInvalid": "Der Zugangscode ist ungültig.",
+    "rooms.flash.fileForbidden": "Die Zugriff auf die Datei wurde verweigert.",
+    "rooms.flash.fileGone": "Die Datei wurde in der Zwischenzeit gelöscht.",
+    "rooms.flash.noNewRoom": "Sie haben nicht die nötige Berechtigung um einen neuen Raum zu erstellen.",
+    "rooms.flash.startForbidden": "Der Raum kann von Ihnen nicht gestartet werden.",
+    "rooms.flash.tokenInvalid": "Der personalisierte Raumlink ist nicht mehr gültig.",
     "rooms.invalidPersonalLink": "Dieser personalisierte Raumlink ist ungültig.",
     "rooms.invitation.code": "Zugangscode: :code",
     "rooms.invitation.link": "Link: :link",
@@ -618,9 +604,9 @@
     "settings.servers.ownMeetingCount": "Eigene Meetings",
     "settings.servers.ownMeetingDescription": "Meetings, die von diesem System verwaltet werden",
     "settings.servers.panic": "Deaktivieren & Aufräumen",
+    "settings.servers.panic.flash.description": "Es wurden :total Meetings gefunden und :success erfolgreich beendet.",
+    "settings.servers.panic.flash.title": "Der Server wurde deaktiviert.",
     "settings.servers.panicDescription": "Es werden nur Meetings beendet, die über dieses System erstellt wurden!",
-    "settings.servers.panicFlash.message": "Der Server wurde deaktiviert. Es wurden :total Meetings gefunden und :success erfolgreich beendet.",
-    "settings.servers.panicFlash.title": "Deaktivert und aufgeräumt",
     "settings.servers.panicServer": "Server deaktiveren und alle Meetings beenden",
     "settings.servers.participantCount": "Teilnehmer",
     "settings.servers.reload": "Auslastung neu bestimmen",
