Update eslint i18n, add new rules

--- a/lang/en.json
+++ b/lang/en.json
@@ -151,7 +151,7 @@
     "auth.send_password_reset_link": "Send password reset link",
     "auth.set_password": "Set password",
     "auth.throttle": "Too many login attempts. Please try again in :seconds seconds.",
-    "home.description": "The application is based on the Open Source Project <a href=\"https://bigbluebutton.org/\" targent=\"_blank\">BigBlueButton</a>.",
+    "home.description": "The application is based on the Open Source Project BigBlueButton.",
     "home.description_extended": "You can create rooms for your lectures, seminars and tutorials and invite students, employees and guest over a short link. Also you can use the platform for exams and meetings.",
     "home.possibilities.audio.description": "Communicate over a high quality audio connection",
     "home.possibilities.audio.title": "Audio",
@@ -712,7 +712,6 @@
     "validation.boolean": "The :attribute field must be true or false.",
     "validation.confirmed": "The :attribute confirmation does not match.",
     "validation.current_password": "The password is incorrect.",
-    "validation.custom.attribute-name.rule-name": "custom-message",
     "validation.custom.banner.array": "The message banner settings are missing!",
     "validation.custom.banner.icon.regex": "The icon css class should be in the following format: `fa-solid fa-camera`.",
     "validation.custom.banner.required": "The message banner settings are missing!",
