--- a/lang/de.json
+++ b/lang/de.json
@@ -151,7 +151,7 @@
     "auth.send_password_reset_link": "Passwort-Rücksetz-Link senden",
     "auth.set_password": "Passwort setzen",
     "auth.throttle": "Zu viele Loginversuche. Versuchen Sie es bitte in :seconds Sekunden nochmal.",
-    "home.description": "Die Grundlage dafür ist das Open Source Projekt <a href=\"https://bigbluebutton.org/\" targent=\"_blank\">BigBlueButton</a>.",
+    "home.description": "Die Grundlage dafür ist das Open Source Projekt BigBlueButton.",
     "home.description_extended": "Sie können für Ihre Veranstaltungen, Seminare und Übungen Räume erstellen und über einen praktischen Kurzlink Studenten, Mitarbeiter und Gäste einladen. Zusätzlich können Sie die Plattform auch für Prüfungen und Besprechnungen nutzen.",
     "home.possibilities.audio.description": "Kommuniziere über eine qualitativ hochwertige Audioverbindung",
     "home.possibilities.audio.title": "Audio",
@@ -712,7 +712,6 @@
     "validation.boolean": ":attribute muss entweder 'true' oder 'false' sein.",
     "validation.confirmed": ":attribute stimmt nicht mit der Bestätigung überein.",
     "validation.current_password": "Das Passwort ist falsch.",
-    "validation.custom.attribute-name.rule-name": "custom-message",
     "validation.custom.banner.array": "Die Einstellungen für den Banner für Mitteilungen fehlen!",
     "validation.custom.banner.icon.regex": "Die Icon CSS-Klasse muss folgendem Format entsprechen: `fa-solid fa-door-open`.",
     "validation.custom.banner.required": "Die Einstellungen für den Banner für Mitteilungen fehlen!",
