Cleanup and fix locale #288

--- a/lang/de.json
+++ b/lang/de.json
@@ -146,7 +146,6 @@
     "auth.login": "Anmelden",
     "auth.logout": "Abmelden",
     "auth.password": "Passwort",
-    "auth.password_confirmation": "Password bestätigen",
     "auth.reset_password": "Passwort zurücksetzen",
     "auth.send_password_reset_link": "Passwort-Rücksetz-Link senden",
     "auth.set_password": "Passwort setzen",
@@ -285,7 +284,6 @@
     "rooms.members.bulk_remove_user": ":numberOfSelectedUsers Mitglieder löschen",
     "rooms.members.edit_user": "Mitglied bearbeiten",
     "rooms.members.image": "Bild",
-    "rooms.members.invite_guest": "Gast einladen",
     "rooms.members.modals.add.add": "Hinzufügen",
     "rooms.members.modals.add.no_options": "Keine Einträge, bitte suchen Sie nach einem Benutzer.",
     "rooms.members.modals.add.no_result": "Oops! Für diesen Suchbegriff konnten keine Benutzer gefunden werden.",
@@ -308,10 +306,8 @@
     "rooms.no_rooms_available_search": "Keine Räume für diesen Suchbegriff gefunden",
     "rooms.not_running": "Der Raum ist noch nicht gestartet.",
     "rooms.notification.body": "Der Raum wurde um :time gestartet",
-    "rooms.notification.browser_support.message": "Ihr Browser unterstützt keine Benachrichtigung.",
-    "rooms.notification.browser_support.title": "Fehlende Unterstützung",
-    "rooms.notification.denied.message": "Der Browser verweigert Benachrichtigungen.",
-    "rooms.notification.denied.title": "Keine Berechtigung",
+    "rooms.notification.browser_support": "Ihr Browser unterstützt keine Benachrichtigung.",
+    "rooms.notification.denied": "Der Browser verweigert Benachrichtigungen.",
     "rooms.notification.enable": "Beim Start des Raumes benachrichtigen",
     "rooms.notification.enabled": "Sie werden beim Start des Raumes von Ihrem Browser benachrichtigt. Schließen Sie dieses Fenster/Tab nicht.",
     "rooms.only_used_by_authenticated_users": "Dieser Raum kann nur von angemeldeten Benutzern verwendet werden.",
@@ -357,7 +353,6 @@
     "rooms.settings.restrictions.hide_participants_list": "Teilnehmerliste verbergen",
     "rooms.settings.restrictions.only_mod_see_cam": "Webcam nur für Moderatoren sichtbar",
     "rooms.settings.restrictions.title": "Einschränkungen",
-    "rooms.settings.saving": "Einstellungen werden gespeichert ...",
     "rooms.settings.security.access_code_note": "Zugangsbeschränkung für die Teilnahme und Mitgliedschaft (wenn aktiviert).",
     "rooms.settings.security.allow_guests": "Gäste zulassen",
     "rooms.settings.security.allow_new_members": "Neue Mitglieder zulassen",
@@ -380,8 +375,6 @@
     "rooms.tokens.expires": "Verfallsdatum",
     "rooms.tokens.last_usage": "Zuletzt verwendet",
     "rooms.tokens.nodata": "Keine personalisierten Raumlinks vorhanden!",
-    "rooms.tokens.roles.moderator": "Moderator",
-    "rooms.tokens.roles.participant": "Teilnehmer",
     "rooms.tokens.room_link_copied": "Der persionalisierte Raumlink für :firstname :lastname wurde in Ihre Zwischenablage kopiert.",
     "rooms.tokens.title": "Personalisierte Raumlinks",
     "rooms.try_again": "Erneut versuchen",
@@ -403,7 +396,6 @@
     "settings.application.banner.select_link_target": "Linkziel auswählen",
     "settings.application.banner.title": "Banner für Mitteilungen",
     "settings.application.bbb.logo.alt": "Logo Vorschau",
-    "settings.application.bbb.logo.description": "Ändert das Logo der Anwendung. Geben Sie die Bild-URL ein",
     "settings.application.bbb.logo.hint": "https://domain.tld/path/logo.svg",
     "settings.application.bbb.logo.select_file": "Logo-Datei auswählen",
     "settings.application.bbb.logo.title": "Logo",
@@ -414,7 +406,6 @@
     "settings.application.default_presentation": "Standard Präsentation",
     "settings.application.default_timezone": "Standardzeitzone",
     "settings.application.favicon.alt": "Favicon Vorschau",
-    "settings.application.favicon.description": "Ändert das Favicon der Anwendung. Geben Sie die Favicon URL ein",
     "settings.application.favicon.hint": "https://domain.tld/path/favicon.ico",
     "settings.application.favicon.select_file": "Favicon-Datei auswählen",
     "settings.application.favicon.title": "Favicon",
@@ -425,7 +416,6 @@
     "settings.application.legal_notice_url.description": "Wenn nicht gesetzt, wird kein Link zum Impressum in der Fußzeile angezeigt.",
     "settings.application.legal_notice_url.title": "URL zum Impressum",
     "settings.application.logo.alt": "Logo Vorschau",
-    "settings.application.logo.description": "Ändert das Logo der Anwendung. Geben Sie die Bild-URL ein",
     "settings.application.logo.hint": "https://domain.tld/path/logo.svg",
     "settings.application.logo.select_file": "Logo-Datei auswählen",
     "settings.application.logo.title": "Logo",
@@ -586,8 +576,7 @@
     "settings.users.generate_password_description": "Es wird ein generiertes Passwort gesetzt und eine E-Mail mit einem Passwort-Rücksetz-Link an den Benutzer gesendet. Wenn der Benutzer das Passwort in einem bestimmten Zeitraum nicht ändert, wird dieser automatisch wieder gelöscht.",
     "settings.users.image.crop": "Profilbild zuschneiden",
     "settings.users.image.delete": "Bild löschen",
-    "settings.users.image.invalid_mime.message": "Das Dateiformat wird nicht unterstützt. Bitte wählen Sie eine jpg- oder png-Datei aus.",
-    "settings.users.image.invalid_mime.title": "Ungültiges Dateiformat",
+    "settings.users.image.invalid_mime": "Das Dateiformat wird nicht unterstützt. Bitte wählen Sie eine jpg- oder png-Datei aus.",
     "settings.users.image.save": "Übernehmen",
     "settings.users.image.title": "Profilbild",
     "settings.users.image.undo_delete": "Löschen rückgänig machen",
