--- a/lang/en.json
+++ b/lang/en.json
@@ -146,7 +146,6 @@
     "auth.login": "Login",
     "auth.logout": "Logout",
     "auth.password": "Password",
-    "auth.password_confirmation": "Confirm password",
     "auth.reset_password": "Reset password",
     "auth.send_password_reset_link": "Send password reset link",
     "auth.set_password": "Set password",
@@ -285,7 +284,6 @@
     "rooms.members.bulk_remove_user": "Remove :numberOfSelectedUsers members",
     "rooms.members.edit_user": "Edit member",
     "rooms.members.image": "Picture",
-    "rooms.members.invite_guest": "Invite guest",
     "rooms.members.modals.add.add": "Add",
     "rooms.members.modals.add.no_options": "No entries, please search for a user.",
     "rooms.members.modals.add.no_result": "Oops! No user was found for this query.",
@@ -308,10 +306,8 @@
     "rooms.no_rooms_available_search": "No rooms found for this search query",
     "rooms.not_running": "This room is not started yet.",
     "rooms.notification.body": "The room was started at :time",
-    "rooms.notification.browser_support.message": "Your browser does not support notification.",
-    "rooms.notification.browser_support.title": "Missing support",
-    "rooms.notification.denied.message": "The browser denied notifications.",
-    "rooms.notification.denied.title": "No permission",
+    "rooms.notification.browser_support": "Your browser does not support notification.",
+    "rooms.notification.denied": "The browser denied notifications.",
     "rooms.notification.enable": "Notify on room start",
     "rooms.notification.enabled": "You will be notified by your browser when the room starts. Do not close this window/tab.",
     "rooms.only_used_by_authenticated_users": "This room can only be used by authenticated users.",
@@ -357,7 +353,6 @@
     "rooms.settings.restrictions.hide_participants_list": "Hide list of participants",
     "rooms.settings.restrictions.only_mod_see_cam": "Only moderators can see the webcam",
     "rooms.settings.restrictions.title": "Restrictions",
-    "rooms.settings.saving": "saving ...",
     "rooms.settings.security.access_code_note": "Access restriction for joining the room and room membership (if enabled).",
     "rooms.settings.security.allow_guests": "Allow guests",
     "rooms.settings.security.allow_new_members": "Allow new members",
@@ -380,8 +375,6 @@
     "rooms.tokens.expires": "Expiry date",
     "rooms.tokens.last_usage": "Last used",
     "rooms.tokens.nodata": "No personalized room links available!",
-    "rooms.tokens.roles.moderator": "Moderator",
-    "rooms.tokens.roles.participant": "Participant",
     "rooms.tokens.room_link_copied": "The personalized room link for :firstname :lastname was copied to your clipboard.",
     "rooms.tokens.title": "Personalized room links",
     "rooms.try_again": "Try again",
@@ -403,7 +396,6 @@
     "settings.application.banner.select_link_target": "Select link target",
     "settings.application.banner.title": "Banner for messages",
     "settings.application.bbb.logo.alt": "Logo preview",
-    "settings.application.bbb.logo.description": "Changes the application logo. Enter the image URL",
     "settings.application.bbb.logo.hint": "https://domain.tld/path/logo.svg",
     "settings.application.bbb.logo.select_file": "Select logo file",
     "settings.application.bbb.logo.title": "Logo",
@@ -414,7 +406,6 @@
     "settings.application.default_presentation": "Default presentation",
     "settings.application.default_timezone": "Default timezone",
     "settings.application.favicon.alt": "Favicon preview",
-    "settings.application.favicon.description": "Changes the application favicon. Enter the favicon URL",
     "settings.application.favicon.hint": "https://domain.tld/path/favicon.ico",
     "settings.application.favicon.select_file": "Select favicon file",
     "settings.application.favicon.title": "Favicon",
@@ -425,7 +416,6 @@
     "settings.application.legal_notice_url.description": "If not set, no legal notice link will be displayed in the footer.",
     "settings.application.legal_notice_url.title": "URL to the legal notice",
     "settings.application.logo.alt": "Logo preview",
-    "settings.application.logo.description": "Changes the application logo. Enter the image URL",
     "settings.application.logo.hint": "https://domain.tld/path/logo.svg",
     "settings.application.logo.select_file": "Select logo file",
     "settings.application.logo.title": "Logo",
@@ -581,13 +571,12 @@
     "settings.users.delete.item": "Delete user :firstname :lastname",
     "settings.users.delete.title": "Delete user?",
     "settings.users.edit": "Edit user :firstname :lastname",
-    "settings.users.email": "E-Mail",
+    "settings.users.email": "Email",
     "settings.users.generate_password": "Generate password",
     "settings.users.generate_password_description": "A generated password will be set and an email with a reset link will be sent to the user. The user will be automatically deleted, if he doesn't change his password in the given time.",
     "settings.users.image.crop": "Crop profile picture",
     "settings.users.image.delete": "Delete picture",
-    "settings.users.image.invalid_mime.message": "The file format is not supported. Please select a jpg or png file.",
-    "settings.users.image.invalid_mime.title": "Invalid file format",
+    "settings.users.image.invalid_mime": "The file format is not supported. Please select a jpg or png file.",
     "settings.users.image.save": "Confirm",
     "settings.users.image.title": "Profile picture",
     "settings.users.image.undo_delete": "Undo deletion",
