Fix lang, cleanup, add and fix tests

--- a/lang/de.json
+++ b/lang/de.json
@@ -607,6 +607,7 @@
     "settings.users.email": "E-Mail",
     "settings.users.generate_password": "Passwort generieren lassen",
     "settings.users.generate_password_description": "Es wird ein generiertes Passwort gesetzt und eine E-Mail mit einem Passwort-Rücksetz-Link an den Benutzer gesendet. Wenn der Benutzer das Passwort in einem bestimmten Zeitraum nicht ändert, wird dieser automatisch wieder gelöscht.",
+    "settings.users.hide_password": "Password verbergen",
     "settings.users.image.crop": "Profilbild zuschneiden",
     "settings.users.image.delete": "Bild löschen",
     "settings.users.image.invalid_mime": "Das Dateiformat wird nicht unterstützt. Bitte wählen Sie eine jpg- oder png-Datei aus.",
@@ -618,6 +619,8 @@
     "settings.users.no_data": "Es sind keine Benutzer vorhanden!",
     "settings.users.no_data_filtered": "Für die Suchanfrage wurden keine Benutzer gefunden!",
     "settings.users.other_settings": "Weitere Einstellungen",
+    "settings.users.other_settings.bbb": "BigBlueButton",
+    "settings.users.other_settings.skip_check_audio": "Echo-Test deaktivieren",
     "settings.users.password_reset_success": "Passwort-Rücksetz-Mail wurde erfolgreich an :mail verschickt!",
     "settings.users.remove_role": "Rolle entfernen",
     "settings.users.reset_password.confirm": "Wollen Sie das Passwort für :firstname :lastname wirklich zurücksetzen?",
@@ -625,6 +628,7 @@
     "settings.users.reset_password.title": "Passwort zurücksetzen?",
     "settings.users.role_filter": "Rolle zum Filtern auswählen",
     "settings.users.roles_and_permissions": "Rollen and Berechtigungen",
+    "settings.users.show_password": "Password anzeigen",
     "settings.users.tile_description": "Die Benutzer können sich an dem System anmelden und je nach Rolle unterschiedliche Funktionen nutzen.",
     "settings.users.timezone": "Zeitzone",
     "settings.users.user_locale": "Sprache",
