--- a/lang/en.json
+++ b/lang/en.json
@@ -607,6 +607,7 @@
     "settings.users.email": "Email",
     "settings.users.generate_password": "Generate password",
     "settings.users.generate_password_description": "A generated password will be set and an email with a reset link will be sent to the user. The user will be automatically deleted, if he doesn't change his password in the given time.",
+    "settings.users.hide_password": "Hide password",
     "settings.users.image.crop": "Crop profile picture",
     "settings.users.image.delete": "Delete picture",
     "settings.users.image.invalid_mime": "The file format is not supported. Please select a jpg or png file.",
@@ -618,6 +619,8 @@
     "settings.users.no_data": "No users found!",
     "settings.users.no_data_filtered": "For the filter query no users were found!",
     "settings.users.other_settings": "Other settings",
+    "settings.users.other_settings.bbb": "BigBlueButton",
+    "settings.users.other_settings.skip_check_audio": "Disable echo audio test",
     "settings.users.password_reset_success": "Password reset mail was successfully send to :mail!",
     "settings.users.remove_role": "Remove role",
     "settings.users.reset_password.confirm": "Are you really want to reset the password for :firstname :lastname?",
@@ -625,6 +628,7 @@
     "settings.users.reset_password.title": "Reset password?",
     "settings.users.role_filter": "Select role for filtering",
     "settings.users.roles_and_permissions": "Roles and permissions",
+    "settings.users.show_password": "Show password",
     "settings.users.tile_description": "Users can login to the system and use different features depending on their role.",
     "settings.users.timezone": "Timezone",
     "settings.users.user_locale": "Language",
