Add verify email test

--- a/lang/de.json
+++ b/lang/de.json
@@ -46,6 +46,7 @@
     "app.flash.server_error.error_code": "Fehlercode: :statusCode",
     "app.flash.server_error.message": ":message",
     "app.flash.too_large": "Die übertragenen Daten waren zu groß!",
+    "app.flash.too_many_requests": "Zu viele Anfragen. Bitte versuchen Sie es später noch einmal.",
     "app.flash.unauthenticated": "Sie müssen angemeldet sein, um die Anfrage durchführen zu können!",
     "app.flash.unauthorized": "Sie haben für die aufgerufene Route nicht die notwendigen Rechte!",
     "app.footer.legal_notice": "Impressum",
@@ -132,7 +133,6 @@
     "app.verify_email.invalid": "Der Verifizierungslink ist ungültig oder abgelaufen!",
     "app.verify_email.success": "Ihre E-Mail wurde erfolgreich verifiziert!",
     "app.verify_email.title": "E-mail verifizieren",
-    "app.verify_email.too_many": "Sie haben die maximale Anzahl an Verifizierungsversuchen erreicht! Versuchen Sie es später erneut.",
     "app.view": "Anzeigen",
     "app.wait": "Bitte warten...",
     "app.yes": "Ja",
