--- a/lang/en.json
+++ b/lang/en.json
@@ -46,6 +46,7 @@
     "app.flash.server_error.error_code": "Error code: :statusCode",
     "app.flash.server_error.message": ":message",
     "app.flash.too_large": "The transmitted data was too large!",
+    "app.flash.too_many_requests": "Too many requests. Please try again later.",
     "app.flash.unauthenticated": "You must be authenticated to execute the request!",
     "app.flash.unauthorized": "You don't have the necessary rights to access the called route!",
     "app.footer.legal_notice": "Legal notice",
@@ -132,7 +133,6 @@
     "app.verify_email.invalid": "The verification link is invalid or has expired!",
     "app.verify_email.success": "Your email address was successfully verified!",
     "app.verify_email.title": "Email verification",
-    "app.verify_email.too_many": "You have reached the maximum number of verification attempts! Please try again later.",
     "app.view": "View",
     "app.wait": "Please wait...",
     "app.yes": "Yes",
