added button and modal for bulk import of users

--- a/lang/de.json
+++ b/lang/de.json
@@ -61,6 +61,7 @@
     "app.model.servers": "Server",
     "app.model.users": "Benutzer",
     "app.model_name": "Name",
+    "app.next": "Weiter",
     "app.next_page": "Nächste Seite",
     "app.no": "Nein",
     "app.not_found": "404 | Die aufgerufene Adresse existiert nicht!",
@@ -280,15 +281,20 @@
     "rooms.login": "Anmelden",
     "rooms.meeting_history.title": "Historie",
     "rooms.members.add_user": "Benutzer hinzufügen",
+    "rooms.members.bulk_add_user": "Mehrere Benutzer hinzufügen",
     "rooms.members.bulk_edit_user": ":numberOfSelectedUsers Mitglieder bearbeiten",
     "rooms.members.bulk_remove_user": ":numberOfSelectedUsers Mitglieder löschen",
     "rooms.members.edit_user": "Mitglied bearbeiten",
     "rooms.members.image": "Bild",
     "rooms.members.modals.add.add": "Hinzufügen",
+    "rooms.members.modals.add.description_bulk": "Bitte fügen Sie eine E-Mail Liste ein",
+    "rooms.members.modals.add.information_bulk": "Jede Zeile steht für eine eigene E-Mail Adresse",
     "rooms.members.modals.add.no_options": "Keine Einträge, bitte suchen Sie nach einem Benutzer.",
     "rooms.members.modals.add.no_result": "Oops! Für diesen Suchbegriff konnten keine Benutzer gefunden werden.",
+    "rooms.members.modals.add.preview_bulk": "Importvorschau",
     "rooms.members.modals.add.select_role": "Bitte wählen Sie eine Rolle aus",
     "rooms.members.modals.add.select_user": "Bitte wählen Sie einen Benutzer aus",
+    "rooms.members.modals.add.textarea.description_bulk": "Fügen Sie hier die E-Mail Liste ein",
     "rooms.members.modals.edit.title": ":firstname :lastname bearbeiten",
     "rooms.members.modals.edit.title_bulk": ":numberOfSelectedUsers Mitglieder bearbeiten",
     "rooms.members.modals.remove.confirm": "Soll :firstname :lastname aus dem Raum entfernt werden?",
