--- a/lang/en.json
+++ b/lang/en.json
@@ -61,6 +61,7 @@
     "app.model.servers": "server",
     "app.model.users": "user",
     "app.model_name": "Name",
+    "app.next": "Next",
     "app.next_page": "Next page",
     "app.no": "No",
     "app.not_found": "404 | The requested route doesn't exists!",
@@ -280,15 +281,20 @@
     "rooms.login": "Login",
     "rooms.meeting_history.title": "History",
     "rooms.members.add_user": "Add user",
+    "rooms.members.bulk_add_user": "Add several users",
     "rooms.members.bulk_edit_user": "Edit :numberOfSelectedUsers members",
     "rooms.members.bulk_remove_user": "Remove :numberOfSelectedUsers members",
     "rooms.members.edit_user": "Edit member",
     "rooms.members.image": "Picture",
     "rooms.members.modals.add.add": "Add",
+    "rooms.members.modals.add.description_bulk": "Please insert an e-mail list",
+    "rooms.members.modals.add.information_bulk": "Every line represents a separate e-mail address",
     "rooms.members.modals.add.no_options": "No entries, please search for a user.",
     "rooms.members.modals.add.no_result": "Oops! No user was found for this query.",
+    "rooms.members.modals.add.preview_bulk": "Import preview",
     "rooms.members.modals.add.select_role": "Please select a role",
     "rooms.members.modals.add.select_user": "Please select the user you would like to add",
+    "rooms.members.modals.add.textarea.description_bulk": "Copy and paste the e-mail list here",
     "rooms.members.modals.edit.title": "Edit :firstname :lastname",
     "rooms.members.modals.edit.title_bulk": "Edit :numberOfSelectedUsers users",
     "rooms.members.modals.remove.confirm": "Do you want to remove :firstname :lastname from this room?",
