Re-Implement LDAP, Add OIDC and SAML 2.0

--- a/lang/de.json
+++ b/lang/de.json
@@ -142,6 +142,7 @@
     "auth.current_password": "Aktuelles Passwort",
     "auth.email.tab_title": "Email",
     "auth.email.title": "Mit einer Email anmelden",
+    "auth.external_id": "Externe ID",
     "auth.failed": "Diese Kombination aus Zugangsdaten wurde nicht in unserer Datenbank gefunden.",
     "auth.flash.login": "Erfolgreich angemeldet",
     "auth.flash.logout": "Erfolgreich abgemeldet",
@@ -158,8 +159,14 @@
     "auth.logout": "Abmelden",
     "auth.new_password": "Neues Passwort",
     "auth.new_password_confirmation": "Neues Passwort bestätigen",
+    "auth.oidc.tab_title": "OpenID Connect",
+    "auth.oidc.title": "Mit OpenID Connect anmelden",
+    "auth.oidc.redirect": "Anmelden",
     "auth.password": "Passwort",
     "auth.reset_password": "Passwort zurücksetzen",
+    "auth.saml2.tab_title": "SAML 2.0",
+    "auth.saml2.title": "Mit SAML 2.0 anmelden",
+    "auth.saml2.redirect": "Anmelden",
     "auth.send_email_confirm_mail": "Es wurde eine Bestätigungsmail an {email} gesendet. Bestätigen Sie die Änderung, in dem Sie auf den Link in der E-Mail klicken.",
     "auth.send_password_reset_link": "Passwort-Rücksetz-Link senden",
     "auth.sessions.active": "Aktive Sitzungen",
@@ -597,9 +604,9 @@
     "settings.servers.video_count": "Videos",
     "settings.servers.view": "Detaillierte Informationen über Server :name",
     "settings.title": "Einstellungen",
-    "settings.users.authenticator.ldap": "LDAP",
+    "settings.users.authenticator.external": "Extern",
     "settings.users.authenticator.title": "Anmeldeart",
-    "settings.users.authenticator.users": "Registrierter Beutzer",
+    "settings.users.authenticator.local": "Lokal",
     "settings.users.base_data": "Stammdaten",
     "settings.users.delete.confirm": "Wollen Sie den Benutzer :firstname :lastname wirklich löschen?",
     "settings.users.delete.item": "Benutzer :firstname :lastname löschen",
