--- a/lang/en.json
+++ b/lang/en.json
@@ -142,6 +142,7 @@
     "auth.current_password": "Current password",
     "auth.email.tab_title": "Email",
     "auth.email.title": "Login with Email",
+    "auth.external_id": "External ID",
     "auth.failed": "These credentials do not match our records.",
     "auth.flash.login": "Successfully logged in",
     "auth.flash.logout": "Successfully logged out",
@@ -597,9 +598,9 @@
     "settings.servers.video_count": "Videos",
     "settings.servers.view": "Detailed information for the server :name",
     "settings.title": "Settings",
-    "settings.users.authenticator.ldap": "LDAP",
+    "settings.users.authenticator.external": "External",
     "settings.users.authenticator.title": "Authentication Type",
-    "settings.users.authenticator.users": "Registered User",
+    "settings.users.authenticator.local": "Local",
     "settings.users.base_data": "Base data",
     "settings.users.delete.confirm": "Are you really want to delete the user :firstname :lastname?",
     "settings.users.delete.item": "Delete user :firstname :lastname",
