--- a/lang/de.json
+++ b/lang/de.json
@@ -53,6 +53,7 @@
     "app.footer.privacy_policy": "Datenschutzerklärung",
     "app.help": "Benötigen Sie Hilfe?",
     "app.id": "ID",
+    "app.home": "Startseite",
     "app.lastname": "Nachname",
     "app.link_targets.blank": "In einem neuen Tab öffnen",
     "app.link_targets.self": "Im aktuellen Tab öffnen",
@@ -145,7 +146,8 @@
     "auth.external_id": "Externe ID",
     "auth.failed": "Diese Kombination aus Zugangsdaten wurde nicht in unserer Datenbank gefunden.",
     "auth.flash.login": "Erfolgreich angemeldet",
-    "auth.flash.logout": "Erfolgreich abgemeldet",
+    "auth.logout_success": "Erfolgreich abgemeldet",
+    "auth.flash.logout_error": "Abmelden fehlgeschlagen",
     "auth.flash.logout_all_others": "Die Abmeldung von allen anderen Geräten verlief erfolgreich!",
     "auth.flash.password_changed": "Passwort erfolgreich geändert",
     "auth.forgot_password": "Passwort vergessen?",
@@ -162,11 +164,13 @@
     "auth.oidc.tab_title": "OpenID Connect",
     "auth.oidc.title": "Mit OpenID Connect anmelden",
     "auth.oidc.redirect": "Anmelden",
+    "auth.oidc.logout_incomplete": "Achtung: Sie sind weiterhin bei OpenID Connect angemeldet.",
     "auth.password": "Passwort",
     "auth.reset_password": "Passwort zurücksetzen",
     "auth.saml2.tab_title": "SAML 2.0",
     "auth.saml2.title": "Mit SAML 2.0 anmelden",
     "auth.saml2.redirect": "Anmelden",
+    "auth.saml2.logout_incomplete": "Achtung: Sie sind weiterhin bei SAML 2.0 angemeldet.",
     "auth.send_email_confirm_mail": "Es wurde eine Bestätigungsmail an {email} gesendet. Bestätigen Sie die Änderung, in dem Sie auf den Link in der E-Mail klicken.",
     "auth.send_password_reset_link": "Passwort-Rücksetz-Link senden",
     "auth.sessions.active": "Aktive Sitzungen",
