Add error handling, update docs

--- a/lang/de.json
+++ b/lang/de.json
@@ -143,6 +143,9 @@
     "auth.current_password": "Aktuelles Passwort",
     "auth.email.tab_title": "Email",
     "auth.email.title": "Mit einer Email anmelden",
+    "auth.error.login_failed": "Anmeldung fehlgeschlagen",
+    "auth.error.reason": "Fehlergrund",
+    "auth.error.missing_attributes": "Es fehlen Attribute für die Authentifizierung.",
     "auth.external_id": "Externe ID",
     "auth.failed": "Diese Kombination aus Zugangsdaten wurde nicht in unserer Datenbank gefunden.",
     "auth.flash.login": "Erfolgreich angemeldet",
