Exception handling, fix cs

--- a/lang/de.json
+++ b/lang/de.json
@@ -52,8 +52,8 @@
     "app.footer.legal_notice": "Impressum",
     "app.footer.privacy_policy": "Datenschutzerklärung",
     "app.help": "Benötigen Sie Hilfe?",
-    "app.id": "ID",
     "app.home": "Startseite",
+    "app.id": "ID",
     "app.lastname": "Nachname",
     "app.link_targets.blank": "In einem neuen Tab öffnen",
     "app.link_targets.self": "Im aktuellen Tab öffnen",
@@ -143,15 +143,16 @@
     "auth.current_password": "Aktuelles Passwort",
     "auth.email.tab_title": "Email",
     "auth.email.title": "Mit einer Email anmelden",
+    "auth.error.invalid_configuration": "Die Konfiguration des Anmeldedienstes ist fehlerhaft.",
     "auth.error.login_failed": "Anmeldung fehlgeschlagen",
-    "auth.error.reason": "Fehlergrund",
     "auth.error.missing_attributes": "Es fehlen Attribute für die Authentifizierung.",
+    "auth.error.network_issue": "Es konnte keine Verbindung zum Anmeldedienst aufgebaut werden. Vesuchen Sie es später erneut.",
+    "auth.error.reason": "Fehlergrund",
     "auth.external_id": "Externe ID",
     "auth.failed": "Diese Kombination aus Zugangsdaten wurde nicht in unserer Datenbank gefunden.",
     "auth.flash.login": "Erfolgreich angemeldet",
-    "auth.logout_success": "Erfolgreich abgemeldet",
-    "auth.flash.logout_error": "Abmelden fehlgeschlagen",
     "auth.flash.logout_all_others": "Die Abmeldung von allen anderen Geräten verlief erfolgreich!",
+    "auth.flash.logout_error": "Abmelden fehlgeschlagen",
     "auth.flash.password_changed": "Passwort erfolgreich geändert",
     "auth.forgot_password": "Passwort vergessen?",
     "auth.input_new_password": "Neues Passwort setzen",
@@ -160,20 +161,21 @@
     "auth.ldap.title": "Mit einem LDAP-Account anmelden",
     "auth.ldap.username": "Benutzerkennung",
     "auth.ldap.username_help": "Geben Sie die Benutzerkennung (nicht die Email) Ihres LDAP-Account an",
+    "auth.logout_success": "Erfolgreich abgemeldet",
     "auth.login": "Anmelden",
     "auth.logout": "Abmelden",
     "auth.new_password": "Neues Passwort",
     "auth.new_password_confirmation": "Neues Passwort bestätigen",
+    "auth.oidc.logout_incomplete": "Achtung: Sie sind weiterhin bei OpenID Connect angemeldet.",
+    "auth.oidc.redirect": "Anmelden",
     "auth.oidc.tab_title": "OpenID Connect",
     "auth.oidc.title": "Mit OpenID Connect anmelden",
-    "auth.oidc.redirect": "Anmelden",
-    "auth.oidc.logout_incomplete": "Achtung: Sie sind weiterhin bei OpenID Connect angemeldet.",
     "auth.password": "Passwort",
     "auth.reset_password": "Passwort zurücksetzen",
+    "auth.saml2.logout_incomplete": "Achtung: Sie sind weiterhin bei SAML 2.0 angemeldet.",
+    "auth.saml2.redirect": "Anmelden",
     "auth.saml2.tab_title": "SAML 2.0",
     "auth.saml2.title": "Mit SAML 2.0 anmelden",
-    "auth.saml2.redirect": "Anmelden",
-    "auth.saml2.logout_incomplete": "Achtung: Sie sind weiterhin bei SAML 2.0 angemeldet.",
     "auth.send_email_confirm_mail": "Es wurde eine Bestätigungsmail an {email} gesendet. Bestätigen Sie die Änderung, in dem Sie auf den Link in der E-Mail klicken.",
     "auth.send_password_reset_link": "Passwort-Rücksetz-Link senden",
     "auth.sessions.active": "Aktive Sitzungen",
@@ -612,8 +614,8 @@
     "settings.servers.view": "Detaillierte Informationen über Server :name",
     "settings.title": "Einstellungen",
     "settings.users.authenticator.external": "Extern",
-    "settings.users.authenticator.title": "Anmeldeart",
     "settings.users.authenticator.local": "Lokal",
+    "settings.users.authenticator.title": "Anmeldeart",
     "settings.users.base_data": "Stammdaten",
     "settings.users.delete.confirm": "Wollen Sie den Benutzer :firstname :lastname wirklich löschen?",
     "settings.users.delete.item": "Benutzer :firstname :lastname löschen",
