--- a/lang/en.json
+++ b/lang/en.json
@@ -52,6 +52,7 @@
     "app.footer.legal_notice": "Legal notice",
     "app.footer.privacy_policy": "Privacy policy",
     "app.help": "Do you need help?",
+    "app.home": "Home",
     "app.id": "ID",
     "app.lastname": "Lastname",
     "app.link_targets.blank": "Open in a new tab",
@@ -142,10 +143,12 @@
     "auth.current_password": "Current password",
     "auth.email.tab_title": "Email",
     "auth.email.title": "Login with Email",
+    "auth.error.missing_attributes": "Attributes for authentication are missing.",
+    "auth.external_id": "External ID",
     "auth.failed": "These credentials do not match our records.",
     "auth.flash.login": "Successfully logged in",
-    "auth.flash.logout": "Successfully logged out",
     "auth.flash.logout_all_others": "The other devices have been successfully logged out!",
+    "auth.flash.logout_error": "Logout failed",
     "auth.flash.password_changed": "Password successfully changed",
     "auth.forgot_password": "Forgot password?",
     "auth.input_new_password": "Set new password",
@@ -156,6 +159,7 @@
     "auth.ldap.username_help": "Input the username (not email) of your LDAP-Account",
     "auth.login": "Login",
     "auth.logout": "Logout",
+    "auth.logout_success": "Successfully logged out",
     "auth.new_password": "New password",
     "auth.new_password_confirmation": "New password confirmation",
     "auth.password": "Password",
@@ -475,7 +479,7 @@
     "settings.application.room_auto_delete.inactive_period.title": "Period until inactive rooms are deleted",
     "settings.application.room_auto_delete.never_used_period.description": "Rooms that were created before the period but have not been used yet",
     "settings.application.room_auto_delete.never_used_period.title": "Period until never used rooms are deleted",
-    "settings.application.room_limit.description": "Limits the number of rooms that a user can have. This setting does not apply to administrators.    Enter the value -1 for unlimited number of rooms",
+    "settings.application.room_limit.description": "Limits the number of rooms that a user can have. This setting does not apply to administrators.        Enter the value -1 for unlimited number of rooms",
     "settings.application.room_limit.title": "Number of rooms per user",
     "settings.application.room_token_expiration.description": "Time period since last usage, after which personalized room links gets automatically removed.",
     "settings.application.room_token_expiration.title": "Expiration time for personalized room links",
@@ -597,9 +601,9 @@
     "settings.servers.video_count": "Videos",
     "settings.servers.view": "Detailed information for the server :name",
     "settings.title": "Settings",
-    "settings.users.authenticator.ldap": "LDAP",
+    "settings.users.authenticator.external": "External",
+    "settings.users.authenticator.local": "Local",
     "settings.users.authenticator.title": "Authentication Type",
-    "settings.users.authenticator.users": "Registered User",
     "settings.users.base_data": "Base data",
     "settings.users.delete.confirm": "Are you really want to delete the user :firstname :lastname?",
     "settings.users.delete.item": "Delete user :firstname :lastname",
